--- a/Django/itbank/Prestamos/static/Prestamos/css/styles.css
+++ b/Django/itbank/Prestamos/static/Prestamos/css/styles.css
@@ -1,21 +1,129 @@
 body {
-    background: rgb(2,86,138);
-    background: linear-gradient(90deg, rgba(2,86,138,1) 0%, rgba(21,62,87,1) 100%);
+    background: #e7e7e7;
+    height: 100vh;
+    overflow-x: hidden;
+}
+
+/*********************** Vickyd Header ***********************/
+
+.logo {
+    max-width: 150px;
+}
+
+#navbarText ul{
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    font-weight: bold;
+}
+
+.form-check {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 10px;
+}
+
+.form-check-label {
+    margin-left: 5px;
+}
+
+.nav-item {
+    display: flex;
+    align-items: center;
+    margin: 0px 10px 0px 10px;
+}
+
+.nav-icon {
+    height: 1.5em;
+    width: 1.5em;
+}
+
+/*********************** Fin Vickyd Header ***********************/
+
+main {
+    height: 100vh;
 }
 
 .titulo {
-    color: white;
-    margin-bottom: 1em;
+    margin: 2em 0 2em 0;
     text-align: center;
-    font-size: 4em;
+    font-size: 2rem;
 
 }
-.container {
+
+.prestamo-wrap {
     background: white;
+    border-radius: 10px;
     display: flex;
+    flex-direction: column;
     margin: 0 auto;
-    width: fit-content;
+    min-width: fit-content;
+    width: 40vw;
     padding: 2em;
     justify-content: center;
 }
 
+.form-row {
+    margin-bottom: 1em;
+}
+.form-row input {
+    display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: .375rem;
+}
+.prestamo-form select {
+    display: block;
+    width: 100%;
+    padding: .375rem 2.25rem .375rem .75rem;
+    -moz-padding-start: calc(0.75rem - 3px);
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: right .75rem center;
+    background-size: 16px 12px;
+    border: 1px solid #ced4da;
+    border-radius: .375rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+
+.error-container {
+    display: flex;
+    flex-direction: column;
+    margin-top: 35px;
+    font-weight: bold;
+}
+.error-container h3 {
+    margin-bottom: 15px;
+}
+.error-container .error {
+    color: var(--bs-danger);
+}
+.error-container .success {
+    color: var(--bs-success);
+}
+
+
+footer {
+
+    width: 100vw;
+}
