Ingreso del "Volver"

--- a/Django/itbank/Prestamos/templates/Prestamos/Prestamos.html
+++ b/Django/itbank/Prestamos/templates/Prestamos/Prestamos.html
@@ -74,6 +74,10 @@
                         <span class="success">Su préstamo ha sido registrado en su cuenta</span>
                         <span class="success">{{ cuentaIban }}</span>
                     {% endif %}
+                    
+                    <div class="volver">
+                        <a href="homebanking.html">Volver</a>
+                        
                 </div>           
             </div>
         </main>
